# Business-Management

./: .env  BUSINESS MANAGEMENET DOX.docx  Cargo.toml  INSTALLATION-GUIDE.md  PROJECT REPORT GUIDELINES.docx  README.md  app.js  cart.html  complete-deployment-guide.md  docker-compose.prod.yml  docker-compose.yml  env.example  frontend-rust-integration.md  hi.md  index.html  mongo-init.js  package-lock.json  package.json  pos tybca 5th sem doc (1).docx  pos tybca 5th sem doc.docx  product.html  rust-backend-setup.md  script.py  search.html  server.js  setup-guide.md  signin.html  style.css  tailwind.config.js  tsconfig.json  vite.config.ts
app/pos-application/: Cargo.toml  docker-compose.yml  handlers.rs  server.rs
app/pos-application/backend/: .env  Cargo.toml  main.rs  pos_database.db-shm  pos_database.db-wal
app/pos-application/backend/migrations/: 001_create_products.sql  002_create_customers.sql  003_create_sales.sql  004_create_suppliers.sql  005_create_settings.sql  20250929000003_create_products.sql
app/pos-application/backend/services/: product_service.rs
app/pos-application/backend/src/: main.rs
app/pos-application/backend/src/handlers/: products.rs
app/pos-application/backend/src/models/: products.rs
app/pos-application/desktop/src-tauri/: build.rs  tauri.conf.json
app/pos-application/frontend/: app.js  app.js.backup  config.js  index.html  server.py  style.css
app/pos-application/frontend/api/: client.js  products.js  sales.js
app/wholesale-pos/: Cargo.toml  README.md  database.rs  frontend.rs  fully-functional-wholesale-erp.html  index.html  main.rs  project-overview.md  run.bat  run.sh  setup-instructions.md  styles.css  wholesale-app-prototype (1).html
app/wholesale-pos/assets/js/: app.js
app/wholesale-pos/docs/: user-guide.md
app/wholesale-pos/erp-backend/: cargo.toml
app/wholesale-pos/erp-backend/src/: index.css  main.rs  tauri.conf.json
app/wholesale-pos/src/: frontend.rs  handlers.rs  main.rs  server.rs
app/wholesale-pos/src-tauri/: commands.rs  database.rs  main.rs  models.rs  package.json
app/wholesale-pos/src-tauri/src/: App.tsx  api.ts  main.tsx
backend/: .env  package.json  server.js
css/: style.css
frontend/: package.json
images/: bottled war.avif
js/: script.js
public/: debug.html  index.html
public/css/: style.css
public/js/: app-debug.js  app.js  customers.js  inventory.js  pos.js  reports.js  settings.js
server/models/: Product.js  Transaction.js
server/routes/: auth.js  customers.js  inventory.js  products.js  transactions.js
servers/middleware/: auth.js
servers/models/: Customer.js  Product.js  User.js
servers/routes/: customers.js  reports.js  transactions.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  models.rs
src-tauri/src/database/: database.rs
src-tauri/src/handlers/: customer_handlers.rs  inventory_handlers.rs  mod.rs  product_handlers.rs  report_handlers.rs  sale_handlers.rs  system_handlers.rs  user_handlers.rs
src-tauri/src/utils/: date_utils.rs  mod.rs
