[package]
name = "pos-app"
version = "1.0.0"
description = "Professional Point of Sale System"
authors = ["Your Name <your.email@domain.com>"]
license = "MIT"
repository = "https://github.com/yourusername/pos-app"
default-run = "pos-app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = ["codegen"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = ["api-all"] }
tokio = { version = "1.35", features = ["full"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
bson = { version = "2.9", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
bcrypt = "0.15"
jsonwebtoken = "9.2"
rust_decimal = { version = "1.33", features = ["serde-float"] }
regex = "1.10"
once_cell = "1.19"
reqwest = { version = "0.11", features = ["json", "tokio"] }
futures = "0.3"
async-trait = "0.1"

# Hardware integration
serialport = { version = "4.3", optional = true }
image = { version = "0.24", optional = true }

# Database migrations (optional)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"], optional = true }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

# Hardware integration features
hardware = ["serialport", "image"]
sqlite-backup = ["sqlx"]

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true

[[bin]]
name = "pos-app"
path = "src/main.rs"