[package]
name = "wholesale-pos"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "wholesale-pos"
path = "src/main.rs"

[dependencies]
# Web server
tokio = { version = "1.0", features = ["full"] }
warp = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - FIXED: Added thread_safe feature
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Utilities - FIXED: Added fmt feature
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
