[package]
name = "pos-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7.1"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
    "chrono",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "10.0.0"
bcrypt = "0.17.1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
anyhow = "1.0"
validator = { version = "0.20.0", features = ["derive"] }
